--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
   "name": "tree-sitter-angular",
-  "version": "1.0.0",
-  "description": "Treesitter grammar for the Angular framework",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/steelsojka/tree-sitter-angular.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/steelsojka/tree-sitter-angular/issues"
-  },
-  "homepage": "https://github.com/steelsojka/tree-sitter-angular#readme",
+  "version": "0.0.1",
+  "description": "angular grammar for tree-sitter",
+  "main": "bindings/node",
+  "keywords": [
+    "parsing",
+    "incremental"
+  ],
   "dependencies": {
-    "nan": "^2.14.2"
+    "nan": "^2.12.1"
   },
   "devDependencies": {
-    "tree-sitter-cli": "^0.17.2"
+    "tree-sitter-cli": "^0.20.8"
+  },
+  "scripts": {
+    "test": "tree-sitter test"
   }
 }
